fixed syntax error in footer of project4-intro, added explicit sizing to all images in about

--- a/pages/about.html
+++ b/pages/about.html
@@ -446,6 +446,7 @@
                         alt="Game controller icon representing Genny Allison's love for gaming"
                         width="114"
                         height="114"
+                        style="aspect-ratio: 114 / 114; object-fit: cover;"
                         decoding="async"
                       />
                       <p>games</p>
@@ -456,6 +457,7 @@
                         width="114"
                         height="114"
                         decoding="async"
+                        style="aspect-ratio: 114 / 114; object-fit: cover;"
                       />
                       <p>baseball & hockey</p>
                     </div>
@@ -465,6 +467,7 @@
                         width="114"
                         height="114"
                         decoding="async"
+                        style="aspect-ratio: 114 / 114; object-fit: cover;"
                       />
                       <p>books</p>
                     </div>
@@ -477,6 +480,7 @@
                       width="40"
                       height="40"
                       decoding="async"
+                      style="aspect-ratio: 40 / 40; object-fit: cover;"
                     />
                   </div>
                   <p>god promises a rainbow after the storm.</p>
@@ -490,7 +494,14 @@
                 <div class="fun-facts">
                   <div class="facts">
                     <div class="check-mark">
-                      <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" alt="checkmark" width="40" height="40" />
+                      <img 
+                        src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" 
+                        alt="checkmark" 
+                        width="40" 
+                        height="40" 
+                        coding="async"
+                        style="aspect-ratio: 40 / 40; object-fit: cover;"
+                      />
                     </div>
                     <div class="check-mark-text">
                       <p>I've been married for 23 years and am a proud mom of three — ages 23, 17, and 11. My husband and I still love playing video games together and cheering at baseball and hockey games.</p>
@@ -499,7 +510,15 @@
 
                   <div class="facts">
                     <div class="check-mark">
-                      <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" alt="checkmark" width="40" height="40" />
+                      <img 
+                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" 
+                      alt="checkmark" 
+                      width="40" 
+                      height="40" 
+                      coding="async"
+                      style="aspect-ratio: 40 / 40; object-fit: cover;"
+                      
+                    />
                     </div>
                     <div class="check-mark-text">
                       <p>When I’m not at my computer, you’ll usually find me at the ballpark watching my 11-year-old son play baseball.</p>
@@ -508,7 +527,14 @@
 
                   <div class="facts">
                     <div class="check-mark">
-                      <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" alt="checkmark" width="40" height="40" />
+                      <img 
+                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" 
+                      alt="checkmark" 
+                      width="40" 
+                      height="40" 
+                      coding="async"
+                      style="aspect-ratio: 40 / 40; object-fit: cover;"
+                    />
                     </div>
                     <div class="check-mark-text">
                       <p>I have two amazing daughters. My 23-year-old is off building her life, and my 17-year-old graduated high school early to start pursuing her dreams.</p>
@@ -517,7 +543,14 @@
 
                   <div class="facts">
                     <div class="check-mark">
-                      <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" alt="checkmark" width="40" height="40" />
+                      <img 
+                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_80,h_80/v1749428408/checkmark-icon_1_xjxra1.png" 
+                      alt="checkmark" 
+                      width="40" 
+                      height="40" 
+                      coding="async"
+                      style="aspect-ratio: 40 / 40; object-fit: cover;"
+                    />
                     </div>
                     <div class="check-mark-text">
                       <p>Our two Golden Retrievers — Ruby and Harley Davidson — keep life joyful (and my floors covered in fur and muddy paw prints).</p>
