--- a/pages/collections.html
+++ b/pages/collections.html
@@ -484,13 +484,12 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project1-thumbnail_palgve.avif" 
-                alt="Thumbnail for Project 1: Tech Trends Blog optimized with AI content and SEO best practices"
-
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project1-thumbnail_palgve.avif" 
+                alt="Project 1 thumbnail: AI-powered Tech Trends Blog featuring SEO strategy, Core Web Vitals, and responsive design"
                 type="image/avif"
-                width="339"
-                height="285"
-                style="object-fit: contain;"
+                width="310"
+                height="261"
+                style="object-fit: contain; aspect-ratio: 310 / 261;"
               />
             </div>
             <div class="collection-links">
@@ -517,12 +516,13 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project2-thumbnail_z7t2rk.avif" 
-                alt="Thumbnail for Project 1: Tech Trends Blog optimized with AI content and SEO best practices"
+              <img 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project2-thumbnail_z7t2rk.avif" 
+                alt="Project 2 thumbnail: Sports Tube video blog showcasing high-performance UI/UX design for sports media"
                 type="image/avif"
-                width="339"
-                height="285"
-                style="object-fit: contain;"
+                width="310"
+                height="261"
+                style="object-fit: contain; aspect-ratio: 310 / 261;"
               />
             </div>
             <div class="collection-links">
@@ -549,13 +549,13 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project3-thumbnail_m2okuz.avif" 
-                alt="Thumbnail for Project 3: UI/UX case study focusing on user experience and interactive design"
-
+              <img 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project3-thumbnail_m2okuz.avif" 
+                alt="Project 3 thumbnail: Community blog with WCAG-compliant layout and AI-generated sports articles"
                 type="image/avif"
-                width="339"
-                height="285"
-                style="object-fit: contain;"
+                width="310"
+                height="261"
+                style="object-fit: contain; aspect-ratio: 310 / 261;"
               />
             </div>
             <div class="collection-links">
@@ -585,13 +585,13 @@
           <div class="collections-container">
 
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743014132/project4-thumbnail_e5nrva.avif" 
-                alt="Thumbnail for Project 4: Web performance project showcasing Core Web Vitals optimization"
-
+              <img 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project4-thumbnail_e5nrva.avif" 
+                alt="Project 4 thumbnail: Service business website optimized for SEO, Core Web Vitals, and mobile-first design"
                 type="image/avif"
-                width="339"
-                height="285"
-                style="object-fit: contain;"
+                width="310"
+                height="261"
+                style="object-fit: contain; aspect-ratio: 310 / 261;"
               />
             </div>
             <div class="collection-links">
@@ -618,12 +618,13 @@
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743017418/project5-thumbnail_ljotky.avif" 
-                alt=""
+              <img 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743017418/project5-thumbnail_ljotky.avif" 
+                alt="Project 5 thumbnail: Video resource page for parents featuring accessible layout and grid-based UI"
                 type="image/avif"
-                width="339"
-                height="285"
-                style="object-fit: contain;"
+                width="310"
+                height="261"
+                style="object-fit: contain; aspect-ratio: 310 / 261;"
               />
             </div>
             <div class="collection-links">
@@ -647,12 +648,13 @@
           </div>
             <div class="collections-container">
               <div class="collections-thumbnail fancy-border-img">
-                <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_339,h_285/v1743017418/project6-thumbnail_ws3h0z.avif" 
-                  alt=""
+                <img 
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743017418/project6-thumbnail_ws3h0z.avif" 
+                  alt="Project 6 thumbnail: Mario & Luigi animation built with HTML, CSS, and JavaScript for a fun UI showcase"
                   type="image/avif"
-                  width="339"
-                height="285"
-                style="object-fit: contain;"
+                  width="310"
+                  height="261"
+                  style="object-fit: contain; aspect-ratio: 310 / 261;"
                 />
               </div>
               <div class="collection-links">
