--- a/pages/collections.html
+++ b/pages/collections.html
@@ -476,20 +476,20 @@
         </div>
       </div>
     </header>
-    <main class="collections-grid">
+    <main class="collections-grid" id="collections-page">
       <div class="collections-row">
         <div class="collection-thumbnail-box">
-          <div class="collections-title collections-border">
-            <h2><a href="/pages/project1/project1-intro.html">project 1</a></h2>
+          <div class="collections-title collections-border" id="project1-thumbnail">
+          <h2><a href="/pages/project1/project1-intro.html">project 1</a></h2>
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
-              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project1-thumbnail_palgve.avif" 
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_518/v1743014132/project1-thumbnail_palgve.avif" 
                 alt="Project 1 thumbnail: AI-powered Tech Trends Blog featuring SEO strategy, Core Web Vitals, and responsive design"
                 type="image/avif"
                 width="310"
-                height="261"
-                style="object-fit: contain; aspect-ratio: 310 / 261;"
+                height="259"
+                style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
             <div class="collection-links">
@@ -517,12 +517,12 @@
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project2-thumbnail_z7t2rk.avif" 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_518/v1743014132/project2-thumbnail_z7t2rk.avif" 
                 alt="Project 2 thumbnail: Sports Tube video blog showcasing high-performance UI/UX design for sports media"
                 type="image/avif"
                 width="310"
-                height="261"
-                style="object-fit: contain; aspect-ratio: 310 / 261;"
+                height="259"
+                style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
             <div class="collection-links">
@@ -550,12 +550,12 @@
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project3-thumbnail_m2okuz.avif" 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_518/v1743014132/project3-thumbnail_m2okuz.avif" 
                 alt="Project 3 thumbnail: Community blog with WCAG-compliant layout and AI-generated sports articles"
                 type="image/avif"
                 width="310"
-                height="261"
-                style="object-fit: contain; aspect-ratio: 310 / 261;"
+                height="259"
+                style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
             <div class="collection-links">
@@ -586,12 +586,12 @@
 
             <div class="collections-thumbnail fancy-border-img">
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743014132/project4-thumbnail_e5nrva.avif" 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_518/v1743014132/project4-thumbnail_e5nrva.avif" 
                 alt="Project 4 thumbnail: Service business website optimized for SEO, Core Web Vitals, and mobile-first design"
                 type="image/avif"
                 width="310"
-                height="261"
-                style="object-fit: contain; aspect-ratio: 310 / 261;"
+                height="259"
+                style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
             <div class="collection-links">
@@ -619,12 +619,12 @@
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
               <img 
-                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743017418/project5-thumbnail_ljotky.avif" 
+                src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_518/v1743017418/project5-thumbnail_ljotky.avif" 
                 alt="Project 5 thumbnail: Video resource page for parents featuring accessible layout and grid-based UI"
                 type="image/avif"
                 width="310"
-                height="261"
-                style="object-fit: contain; aspect-ratio: 310 / 261;"
+                height="259"
+                style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
             <div class="collection-links">
@@ -649,12 +649,12 @@
             <div class="collections-container">
               <div class="collections-thumbnail fancy-border-img">
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_522/v1743017418/project6-thumbnail_ws3h0z.avif" 
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_620,h_518/v1743017418/project6-thumbnail_ws3h0z.avif" 
                   alt="Project 6 thumbnail: Mario & Luigi animation built with HTML, CSS, and JavaScript for a fun UI showcase"
                   type="image/avif"
                   width="310"
-                  height="261"
-                  style="object-fit: contain; aspect-ratio: 310 / 261;"
+                  height="259"
+                  style="object-fit: contain; aspect-ratio: 310 / 259;"
                 />
               </div>
               <div class="collection-links">
