added fetchpriority and loading auto for first 3 thumbnails

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -489,6 +489,9 @@
                 type="image/avif"
                 width="310"
                 height="259"
+                fetchpriority="auto"
+                loading="auto"
+                decoding="async"
                 style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
@@ -522,6 +525,9 @@
                 type="image/avif"
                 width="310"
                 height="259"
+                fetchpriority="auto"
+                loading="auto"
+                decoding="async"
                 style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
@@ -555,6 +561,9 @@
                 type="image/avif"
                 width="310"
                 height="259"
+                fetchpriority="auto"
+                loading="auto"
+                decoding="async"
                 style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
@@ -591,6 +600,7 @@
                 type="image/avif"
                 width="310"
                 height="259"
+                decoding="async"
                 style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
@@ -624,6 +634,7 @@
                 type="image/avif"
                 width="310"
                 height="259"
+                decoding="async"
                 style="object-fit: contain; aspect-ratio: 310 / 259;"
               />
             </div>
@@ -654,6 +665,7 @@
                   type="image/avif"
                   width="310"
                   height="259"
+                  decoding="async"
                   style="object-fit: contain; aspect-ratio: 310 / 259;"
                 />
               </div>
