--- a/pages/collections.html
+++ b/pages/collections.html
@@ -383,7 +383,7 @@
 
     </style>
   </head>
-  <body class="fonts-loading">
+  <body>
     <header>
       <nav role="navigation" aria-label="Main navigation">
         <div class="nav-logo">
