updated links on index

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <div class="animation-container">
             <div class="design-container">      
               <div class="designer-box">
-                <a href="/pages/skills.html">
+                <a href="/pages/resume.html">
                   <h2>designer</h2>
                   <h3 class="element-to-hide768">ai content, ui/ux design expert</h3>
                 </a>  
@@ -325,7 +325,7 @@
               </div>    
               <div class="coder-container">
                 <div class="coder-box">
-                  <a href="/pages/portfolio.html">
+                  <a href="/pages/collections.html">
                     <h2> &lt; coder &gt; </h2>
                     <h3 class="element-to-hide768">functional, responsive code, wcag, seo optimized</h3>   
                   </a>
