updated about me and titles

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Learn more about Genny Allison, a Full Stack Developer blending technical expertise with creativity. With a unique background in design, business, and web development, Genny crafts responsive, user-friendly websites and applications that enhance digital experiences. Explore her journey, skills, and dedication to impactful technology solutions." />
-    <title>Genny Allison | Front End Developer</title>
+    <title>Genny Allison | AI Content Engineer & SEO Web Developer</title>
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
     <!-- Open Graph -->
     <meta property="og:type" content="profile" />
@@ -331,7 +331,7 @@
             "position": 2,
             "name": "My Work",
             "item": "https://gennyallison.netlify.app/pages/about"
-          },
+          }
         ]
       }
     </script>
@@ -429,6 +429,8 @@
               <p>Hello! I'm Genny Allison, a passionate Full Stack Developer with a natural affinity for technology and creative expression. My journey into the digital world has been diverse, starting as a Floral Buyer for a large food distribution company, then moving into the role of Finance Director for a Water Purification Company. I eventually owned and operated my own daycare for 10 years, allowing me the flexibility to raise my children while managing a business. Along the way, I ventured into the world of drop shipping, where I created all product designs using tools like Canva, Adobe Photoshop, Kittl, Figma, and my own photography. This experience not only honed my design skills but also taught me how to blend creativity with strategic business acumen, ensuring that my products were both visually appealing and marketable.
 
               While designing my own products and exploring graphic design, I discovered web development. My love for computers, combined with my creative side, led me to the realization that Full Stack Development could offer the best of both worlds. With the wealth of education available at our fingertips, I decided to delve deeper into the world of computer science, finding a career that satisfies both my creative and technical passions.
+
+              Over the course of just 18 months, I independently created a complete portfolio and six fully developed web projects—handling every aspect from scratch. This included UI/UX design, front-end development, AI-generated content, performance optimization, structured data, and SEO strategy. I built and launched production-ready websites that achieve perfect Core Web Vitals (100/100 PageSpeed scores), with all content and visuals custom-crafted using tools like ChatGPT, Midjourney, and Canva. This level of work typically requires a full cross-functional team over a year or more. My ability to independently plan, execute, and optimize complex content-driven web platforms demonstrates not only technical skill but also strategic thinking, creativity, and strong ownership.
 
               Now, I am dedicated to building dynamic, responsive websites and applications that deliver exceptional user experiences. My background in administration, finance, and business ownership equips me with a unique blend of technical, managerial, and strategic expertise. As I continue to advance my skills in Full Stack Development, I am eager to contribute to impactful digital experiences and business growth, whether in a full-time role or through freelance projects. My ultimate goal is to merge creativity and technology to create innovative solutions that resonate with users and drive success.</p>
             </article>
