--- a/pages/collections.html
+++ b/pages/collections.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Genny Allison | Front End Developer</title>
+    <title>Genny Allison | AI Content Engineer & SEO Web Developer | Project Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
