--- a/pages/skills.html
+++ b/pages/skills.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Genny Allison | Front End Developer</title>
+  <title>Genny Allison | AI Content Engineer & SEO Web Developer | Skills</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover Genny Allison's technical and creative skills, from responsive web design and front-end development to UI/UX, graphic design, and coding languages. This skills showcase reflects a blend of artistic imagination and technical expertise, supporting a seamless, user-focused digital experience." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
