--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Genny Allison | Front End Developer</title>
+    <title>Genny Allison | AI Content Engineer & SEO Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore the portfolio of Genny Allison, a front-end developer focused on crafting responsive, user-centered web experiences. Specializing in UI/UX design and functional coding, Genny brings seamless design and development together for an engaging digital presence.">
     <!-- Open Graph Meta Tags -->
