--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Genny Allison | Front End Developer</title>
+    <title>Genny Allison | AI Content Engineer & SEO Web Developer | Contact Me</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Connect with Genny Allison, front-end developer at Allison Stock Inc., for web design and UI/UX collaborations or inquiries. Reach out via email or phone, or download Genny's resume to learn more about her skills and experience." />
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
