made project title smaller to be easier on the eyes, replaced resume, updated resume article

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -227,7 +227,7 @@
       }
 
       .canvas-skills-title h1 {
-        font-size: clamp(1.5rem, 4vw, 6rem);
+        font-size: clamp(1.5rem, 3vw, 5rem);
         line-height: 1.8;
         height: auto;
         overflow: hidden;
@@ -445,48 +445,54 @@
         <article class="resume-summary" id="aboutme-section1">
           <h2>AI Content Creator · SEO Specialist · Web Performance Optimizer</h2>
           <p>
-            I founded <strong>Allison Stock Inc.</strong> as a performance-focused web development and AI content consultancy. My mission is to build SEO-optimized, fast-loading websites powered by cutting-edge AI tools and human-centered design principles.
+            I founded <strong>Allison Stock Inc.</strong> to specialize in SEO-optimized, AI-powered websites built for speed, clarity, and search performance. I merge content strategy, UX, and front-end development with advanced prompt engineering and structured data.
           </p>
           <p>
-            I specialize in end-to-end development of content-rich platforms using HTML, CSS, JavaScript, WordPress, and performance tuning best practices. Each site is engineered to achieve top Core Web Vitals scores and maximum visibility through structured data, semantic markup, and technical SEO audits.
+            My tech stack includes HTML, CSS, JavaScript, and WordPress. I use performance tuning techniques like lazy loading, image compression, and Core Web Vitals optimization to achieve 100/100 Lighthouse scores and outstanding user experiences.
           </p>
           <p>
-            My creative toolkit includes <strong>ChatGPT, MidJourney, Figma, Canva, Photoshop, and Uizard</strong>. These tools power my workflows in <strong>AI content creation, prompt engineering, UX/UI wireframing, schema generation, and visual branding</strong>.
+            I work with tools like <strong>ChatGPT, Claude, MidJourney, Figma, Canva, Photoshop, and Uizard</strong> to deliver scalable, SEO-aligned solutions for content-rich platforms. From blogs to product pages and portfolios, every element is AI-informed and human-approved.
           </p>
           <p>
-            In parallel with client work, I’ve launched multiple personal case studies and portfolio projects that showcase how AI, performance metrics, and SEO intersect to deliver both search engine success and user satisfaction.
+            My work bridges the gap between visual branding, semantic HTML, and structured SEO—from initial UX layout to long-form AI content and schema markup that meets modern search engine standards.
           </p>
-          <p><strong>AI-Powered Content & Prompt Engineering:</strong> Created AI-generated blog articles, product descriptions, metadata, and schema using ChatGPT, optimized via LLM prompt design and structured workflows. Integrated prompt loops for performance-grade SEO writing and technical content generation.</p>
-          <p><strong>Web Development & Optimization:</strong> Built fast, responsive websites with a focus on <strong>WCAG accessibility</strong>, Core Web Vitals, and Lighthouse 100/100 scores. Applied image compression, lazy loading, custom preload strategies, and responsive breakpoints for peak performance.</p>
-          <p><strong>SEO & Structured Data:</strong> Conducted technical SEO audits, created schema markup, implemented Open Graph/Twitter cards, and optimized layouts to reduce CLS and LCP for both desktop and mobile.</p>
-          <p><strong>Visual Design & Branding:</strong> Designed logos, UI systems, and page layouts using Figma, MidJourney, and Photoshop. Created social share cards, custom icons, and UI components tailored to the brand story of each client.</p>
-          <p><strong>Client Collaboration:</strong> Delivered freelance UI/UX and performance optimization work using WordPress and Elementor. Translated goals into wireframes and prototypes, integrating newsletter forms, dynamic layouts, and mobile-first strategy.</p>
+          <p><strong>AI Content & Prompt Engineering:</strong> Built article frameworks, product descriptions, metadata, and structured content with prompt-driven workflows using ChatGPT and Claude. Applied multi-step prompting, role-based inputs, and SEO-focused iteration loops.</p>
+          <p><strong>Web Development & Optimization:</strong> Launched responsive websites built on semantic code and accessibility-first layouts. Optimized for CLS, LCP, and TTFB with preloaded assets, fluid layouts, and mobile-first performance tuning.</p>
+          <p><strong>SEO & Structured Data:</strong> Conducted technical SEO audits, authored long-tail keyword plans, implemented schema markup (Article, FAQ, Author, Breadcrumb), and deployed Open Graph and Twitter cards for optimal indexing and snippet performance.</p>
+          <p><strong>Visual Design & Branding:</strong> Designed layout systems, logos, and branded visuals with Figma, MidJourney, and Canva. Created assets for blogs, landing pages, and social previews tailored to each client’s goals.</p>
+          <p><strong>Client Collaboration:</strong> Delivered freelance projects including video and blog content page builds, custom layouts in WordPress, and full UX journeys tied to measurable engagement metrics.</p>
 
           <div class="resume-date fancy-border project-sub-title" id="aboutme-section2">
             <h2>My Education</h2>
           </div>
           <p>
-            Homeschooled from 6th grade through graduation, I’ve always embraced independent learning. Every skill I’ve developed—web development, AI integration, SEO, and content strategy—was earned through curiosity, grit, and real-world application.
+            Homeschooled from 6th grade through graduation, I’ve always pursued knowledge independently. My training in web development, SEO, AI content engineering, and UX/UI design is grounded in hands-on practice and self-motivated learning.
           </p>
           <p>
-            I’ve completed or am currently pursuing certifications through the following programs:
+            I’ve completed the following professional certifications:
           </p>
           <div class="list-items">
             <ul>
-              <li><strong>Devslopes Academy</strong> (Aug 2024 – Mar 2025): WordPress, Front/Back-End Development, UX/UI, WCAG, Plugins, E-Commerce.</li>
-              <li><strong>freeCodeCamp</strong> (Apr 2023 – Sep 2024): Full Stack Certification (HTML, CSS, JavaScript, responsive design, GitHub).</li>
-              <li><strong>Codecademy</strong> (Jan 2023 – Sep 2024): In progress Full Stack track with Python, Git/GitHub, deployment workflows, advanced CSS.</li>
-              <li><strong>HubSpot Academy</strong> (Completed Nov 2024): SEO, SEO II, Content Strategy, and Content Marketing certifications.</li>
-              <li><strong>Google Analytics Certification</strong> (Planned): Scheduled post-portfolio for deeper analytics and campaign evaluation skills.</li>
+              <li><strong>Devslopes Academy</strong> (Aug 2024 – Dec 2025): Full Stack Web Development, WordPress, UX/UI, E-Commerce, WCAG Accessibility, and AI-Powered Site Design.</li>
+              <li><strong>freeCodeCamp</strong> (Apr 2023 – Sep 2024): Full Stack Developer Certificate—HTML, CSS, JavaScript, responsive design, Git/GitHub, and frameworks.</li>
+              <li><strong>Codecademy</strong> (Jun 2024): Generative AI for Everyone—LLMs, prompt engineering, AI content creation, NLP, and ethical AI use.</li>
+              <li><strong>DeepLearning.AI</strong> (Jun 2025): ChatGPT Prompt Engineering for Developers—structured prompt design, iteration, and workflow integration with OpenAI APIs.</li>
+              <li><strong>Fiverr Learn</strong> (June 2025): Getting Started with AI Prompt Engineering—applied practices in content design and generation with LLMs.</li>
+              <li><strong>HubSpot Academy</strong> (Nov 2024): 
+                <ul>
+                  <li>SEO I & II</li>
+                  <li>Content Marketing</li>
+                  <li>Content Strategy —keyword research, schema, technical SEO, and scalable strategy planning.</li>
+                </ul>
             </ul>
           </div>
           <p>
-            These programs have given me not just technical fluency, but strategic insight into how <strong>design, SEO, AI, and user experience</strong> intersect in high-performing websites.
+            These programs have strengthened my ability to merge <strong>design, AI, SEO, and performance engineering</strong> into cohesive, high-impact web platforms that serve both people and search engines.
           </p>
 
           <div class="resume-date fancy-border project-sub-title" id="download-me">
             <h2>
-              <a href="/img/genny_allison_resume/gennyallison-resume.pdf" download="/img/genny_allison_resume/gennyallison" class="links">
+              <a href="/img/genny_allison_resume/gennyallison-resume.pdf" download="/img/genny_allison_resume/gennyallison-resume.pdf" class="links">
                 download my resume
               </a>
             </h2>
@@ -518,10 +524,9 @@
             </picture> 
             <div class="author-bio-text">
               <h3>Partner with an AI Content Creator & SEO Specialist</h3>
-              <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
-              <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
-              <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
-
+              <p><i>If you’re seeking a detail-oriented professional who blends creativity, precision, and performance to build digital experiences—let’s connect.</i></p>
+              <p>I'm Genny Allison, founder of <strong>Allison Stock Inc.</strong>. I specialize in AI-enhanced web design, performance optimization, and content engineering. Using tools like ChatGPT, MidJourney, and structured HTML/CSS, I create polished websites and scalable content that meets both user needs and SEO standards.</p>
+              <p>From responsive layouts and schema to keyword-optimized content and fast-loading visuals, I bring a holistic approach to web development that makes sites not only look great but rank and convert.</p>
               <p>Connect with me on 
                 <a href="https://www.linkedin.com/in/genny-allison/" 
                   target="_blank" 
@@ -531,10 +536,12 @@
                 <a href="https://gennyallison.netlify.app"
                   target="_blank" 
                   rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-                  >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+                  >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to bring your project to life.
+              </p>
             </div>
           </div>
         </article>
+
       </div>
     </main>     
     <div id="side-nav" class="hidden">
