--- a/index.html
+++ b/index.html
@@ -71,25 +71,204 @@
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
     <style>
-      section h1:not([class]),
-      article h1:not([class]),
-      nav h1:not([class]),
-      aside h1:not([class]) {
-        font-size: 2rem;
+      picture {
+        width: 100%;
+        display: block;
+        margin: 0 auto;
       }
 
-      body,
-      h1,
-      h2 {
-        font-synthesis: none;
-        font-kerning: none
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        padding: 0.25em;
       }
 
-      section h1,
-      h1 {
+      .canvas-skills-grid {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        width: 100%;
+        max-width: 100vw;
+        background-color: #000;
+        overflow: hidden;
+        box-sizing: border-box;
+        padding: 0.5rem;
+        contain: layout paint style;
+        aspect-ratio: 1904 / 502;
+      }
+      
+
+      .canvas-skills-grid picture {
+        flex: 0 0 40%;
+        max-width: 40%;
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        background-color: #000;
+        box-sizing: border-box;
+        height: auto;
+        aspect-ratio: 1458 / 948;
+      }
+
+      .canvas-skills-grid img {
+        object-position: center;
+        border-top: 1em solid #000;
+        border-left: 1em solid #000;
+        border-right: 0.5em solid #000;
+        border-bottom: 1em solid #000;
+        will-change: transform;
+      }
+
+      img {
+        display: block;
+      }
+
+      img[fetchpriority="high"] {
+        contain: layout paint;
+        content-visibility: auto;
+      }
+
+      /* === TEXT CONTAINER === */
+      .canvas-skills-title {
+        flex: 0 0 60%;
+        max-width: 60%;
+        min-width: 60%;
+        background-color: #fff;
+        border: 1em solid #000;
+        border-left: 0.5em solid #000;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+        height: auto;
+      }
+
+      .canvas-skills-title h1,
+      .canvas-skills-title h2 {
+        font-family: Georgia, 'Times New Roman', serif;
+        font-weight: normal;
+        font-style: normal;
+        text-align: center;
+        line-height: 1.4;
+        font-display: swap;
+        height: auto;
+        margin: 0;
+      }
+
+      .canvas-skills-title h1 {
+        font-size: clamp(1.5rem, 3vw, 5rem);
+        line-height: 1.8;
+        height: auto;
+        overflow: hidden;
+      }
+
+      .canvas-skills-title h2 {
+        font-size: clamp(1.1rem, 3vw, 3rem);
         line-height: 1.5;
-        font-size: 2rem;
+        height: auto;
+        overflow: hidden;
       }
+
+
+      /* === MEDIA QUERIES === */
+
+      /* Tablets: 941px–1024px */
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .canvas-skills-grid {
+          padding: 0.4rem;2
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          height: 100%;
+          border-width: 0.5em;
+        }
+      }
+
+
+      /* Mobile landscape & phablets: 481px–768px */
+      @media (min-width: 481px) and (max-width: 768px) {
+        .canvas-skills-grid {
+          padding: 0.3rem;
+        }
+
+        .canvas-skills-grid picture {
+          max-width: 40%;
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          min-height: 180px;
+          padding: 0.5rem;
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 2.2rem;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1.5rem;
+        }
+      }
+
+      /* Smallest mobile screens ≤ 480px */
+      @media (max-width: 480px) {
+        .canvas-skills-grid {
+          padding: 0.25rem;
+          height: 200px;
+          width: 480px;  
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+          object-fit: cover;
+          min-height: 168px;
+          object-position: center top;
+
+        }
+
+        .canvas-skills-title {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          min-height: 168px;
+          border-width: 0.5em;
+          width: 100%;
+          max-width: 480px;
+          height: auto;
+          padding-right: 0;
+          margin: 0 auto;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 1.1rem;
+          height: auto;
+          width: 100%;
+          line-height: 1.6;
+          margin: 0 auto;
+          padding: 0;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1rem;
+          height: auto;
+          width: 100%;
+          line-height: 1.5;
+          margin: 0 auto;
+          padding: 0;
+        }
+      }
+
     </style>
     <script type="application/ld+json">
       {
