made contact form more responsive, fixed side-nav so it doesn't cover the footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -462,7 +462,7 @@
           <div class="resume-date fancy-border project-sub-title"   id="#contactme-section2">
             <h2>contact me | allison stock inc.</h2>
           </div>  
-          <div class="fancy-border-img" id="contact-form">
+          <div class="fancy-border-img" id="contact-form-border">
               action="https://formspree.io/f/xgveazlv" method="POST"> 
             <div class="contact-form-container contact-container" id="contact-form">
               <form class="contact">
