--- a/index.html
+++ b/index.html
@@ -556,7 +556,8 @@
       <div class="social-media">
         <ul>
           <li>
-            <a href="https://x.com/allis78978" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+            <a href="https://x.com/allis78978" 
+              aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
               <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186687/x-bird-icon_hptlvt.webp" 
                 alt="X (Twitter) logo"
                 width="40"
@@ -569,7 +570,8 @@
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/allison_stock_inc/"  aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/allison_stock_inc/"
+              aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
               <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/ig-icon_loetwi.webp" 
                 alt="Instagram logo"
                 width="40"
@@ -582,7 +584,8 @@
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/genny-allison/"  aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/genny-allison/"   
+              aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
               <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/linkedin-icon_a07bb2.webp" 
                 alt="LinkedIn logo"
                 width="40"
@@ -595,7 +598,8 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/Allison2002" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/Allison2002" 
+              aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
               <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_120,h_120/v1750186686/github-icon_kully4.png" 
                 alt="GitHub logo"
                 width="40"
