updated all pages with an updated resume, updated resume page with new certificates earned

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -339,7 +339,7 @@
 
     </style>
   </head>
-  <body>
+  <body> 
     <nav role="navigation" aria-label="Main navigation">
       <div class="nav-logo">
         <a href="/index.html">
@@ -473,17 +473,44 @@
           </p>
           <div class="list-items">
             <ul>
-              <li><strong>Devslopes Academy</strong> (Aug 2024 – Dec 2025): Full Stack Web Development, WordPress, UX/UI, E-Commerce, WCAG Accessibility, and AI-Powered Site Design.</li>
-              <li><strong>freeCodeCamp</strong> (Apr 2023 – Sep 2024): Full Stack Developer Certificate—HTML, CSS, JavaScript, responsive design, Git/GitHub, and frameworks.</li>
-              <li><strong>Codecademy</strong> (Jun 2024): Generative AI for Everyone—LLMs, prompt engineering, AI content creation, NLP, and ethical AI use.</li>
-              <li><strong>DeepLearning.AI</strong> (Jun 2025): ChatGPT Prompt Engineering for Developers—structured prompt design, iteration, and workflow integration with OpenAI APIs.</li>
-              <li><strong>Fiverr Learn</strong> (June 2025): Getting Started with AI Prompt Engineering—applied practices in content design and generation with LLMs.</li>
-              <li><strong>HubSpot Academy</strong> (Nov 2024): 
-                <ul>
-                  <li>SEO I & II</li>
-                  <li>Content Marketing</li>
-                  <li>Content Strategy —keyword research, schema, technical SEO, and scalable strategy planning.</li>
-                </ul>
+              <li><strong>Prompt Engineering with ChatGPT</strong> (LinkedIn Learning · Issued Jun 2025): Credential ID: 233e87cd2981c44e94b839d53b6cf871c46b33241e47a34c22ec20e849b9f492
+              Skills: Prompt Engineering · ChatGPT · Natural Language Processing (NLP) · AI Content Engineering</li>
+              <li><strong>Introduction to Prompt Engineering for Generative AI</strong> (LinkedIn Learning · Issued Jun 2025): 
+              Credential ID: 8238352f8b5db2d5d7bebeaad3d55d3b383eb501077b34a8a012ce37fb360763
+              Skills: Prompt Engineering · Generative AI · Large Language Models (LLMs) · AI Content Creation
+
+</li>
+              <li><strong>What Is Generative AI?</strong> (LinkedIn Learning (endorsed by NASBA) · Issued Jun 2025): 
+              Credential ID: 59311c684d630d10a74116b4640061a8114608e3d66b3391f2771c2e3ba7c1a3
+              Skills: Generative AI · Artificial Intelligence (AI) · Generative AI Tools
+              Earned 2.0 CPE credits through the National Association of State Boards of Accountancy (NASBA)</li>
+
+              <li><strong>Generative AI for Digital Marketers</strong> (LinkedIn Learning · Issued Jun 2024): 
+              Credential ID: fc6a1f7d076fbe808bd39ac2a5d625fe02380b8c55c8d5ab9c0d9101dac6a6a
+              Skills: Generative AI · Digital Marketing · AI Content Creation · Prompt Engineering</li>
+
+              <li><strong>SEO Certification</strong> (HubSpot Academy · Issued Nov 2024 · Expires Dec 2025): 
+              Credential ID: aa1dbda5b2a9498f9c9df1d5ac136c7c
+              Skills: On-Page SEO · Technical SEO · Keyword Research · SEO Analytics
+              Also completed: Content Strategy (no certificate issued)</li>
+
+              <li><strong>SEO II Certification</strong> (HubSpot Academy · Issued Nov 2024 · Expires Dec 2025): 
+              Credential ID: fbae9f0b92f6477bb4449f06e15491b7
+              Skills: Advanced SEO Strategy · Topic Clustering · Technical SEO Enhancements</li>
+
+              <li><strong>Content Marketing Certification</strong> (HubSpot Academy · Issued Nov 2024 · Expires Nov 2026):
+              Credential ID: 47cba141b391481d865b2d2208ac8eda
+              Skills: Content Strategy & Planning · SEO Content Creation · Audience Engagement · Performance Analytics
+              Note: Course now retired, certificate remains verifiable via HubSpot.</li>
+
+              <li><strong>Responsive Web Design Certification</strong> (freeCodeCamp · Issued Jun 2024):
+              Credential ID: allison2002-rwd
+              Skills: Responsive Design · Semantic HTML · WCAG Compliance · CSS Flexbox & Grid</li>
+
+              <li><strong>Learn Python 3 Course</strong> (Codecademy · Issued Jan 2024):
+              Credential ID: 65B1D57FBD
+              Skills: Python Programming · Object-Oriented Programming (OOP) · File Handling · Data Structures</li>
+              
             </ul>
           </div>
           <p>
